<resources>
    <string name="app_name">Staff Rakho</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_account">Haven’t an account? Register</string>
    <string name="login_account">Have an account? Log in</string>
    <string name="by_signing_up_you_agree_to_our_term_amp_condition">By Signing up you agree to our term &amp; Condition</string>
    <string name="successfully">Your account has been created\n successfully.</string>
    <string name="password_change">Your password has been changed successfully.</string>
    <string name="jobRegisterText">Let’s Register. Apply to jobs!</string>
    <string name="jobLogInText">Let’s log in. Apply to jobs!</string>
    <string name="businessRegisterText">Let’s Register. find the employee!</string>
    <string name="businessLogInText">Let’s log in. find the employee!</string>
    <string name="server_error">Server Error!</string>
    <string name="no_internet">Check  your internet connection</string>
    <string name="fill_name">Name field can\'t be empty!</string>
    <string name="fill_email">Email field can\'t be empty!</string>
    <string name="fill_valid_email">Please enter the valid email</string>
    <string name="fill_valid_email_phone">Please enter valid email/phone</string>
    <string name="fill_phone">Phone Number field can\'t be empty!</string>
    <string name="fill_location">Location field can\'t be empty!</string>
    <string name="fill_area_practice">Please Select Area of practice</string>
    <string name="fill_registration_number">Registration Number field can\'t be empty!</string>
    <string name="fill_about">About field can\'t be empty!</string>
    <string name="fill_valid_phone">Please enter the valid phone number</string>
    <string name="select_gender">Please select the gender</string>
    <string name="select_dob">Please select the Date of Birth</string>
    <string name="fill_password">Password field can\'t be empty!</string>
    <string name="password_validation_text">Enter atLeast 1 number, 1 alphabet and 1 special character..</string>
    <string name="confirm_password_validation_text">Password and confirm password is not match</string>
    <string name="fill_message">Message field can\'t be empty!</string>
    <string name="accept_term_condition">"Please accept the terms and condition"</string>
    <string name="fill_otp">Otp field can\'t be empty!</string>
    <string name="fill_complete_otp">enter correct OTP</string>
    <string name="fill_new_password">New Password field can\'t be empty!</string>
    <string name="fill_confirm_new_password">Confirm New Password field can\'t be empty!</string>
    <string name="password_not_match">Password can\'t match</string>
    <string name="otp_Send">Otp Send Successfully</string>
    <string name="user_type_not_found">User Type Not Found</string>
    <string name="valid_card_number">Please Enter valid card number</string>
    <string name="valid_card_type">Please enter details of valid card</string>
    <string name="valid_expireDate">Please enter valid expiration date</string>
    <string name="valid_cvv">Please enter valid CVV Code</string>
    <string name="userType_not_found">We are not found your user type . Please Try Again!</string>
    <string name="email">Email<font color="#EE1D1D"> *</font></string>
    <string name="fullName">Full Name<font color="#EE1D1D"> *</font></string>
    <string name="phone">Phone Number<font color="#EE1D1D"> *</font></string>
    <string name="companyName">Company / firm /personal name<font color="#EE1D1D"> *</font></string>
    <string name="password">Password<font color="#EE1D1D"> *</font></string>
    <string name="confirmPassword">Confirm Password<font color="#EE1D1D"> *</font></string>
    <string name="date_of_birth">Date of Birth<font color="#EE1D1D"> *</font></string>
    <string name="gender">Gender<font color="#EE1D1D"> *</font></string>
    <string name="job_gender">Preferred Gender for the Job<font color="#EE1D1D"> *</font></string>
    <string name="state">State<font color="#EE1D1D"> *</font></string>
    <string name="city">City<font color="#EE1D1D"> *</font></string>
    <string name="address">Full Job Location  <font color="#EE1D1D"> *</font></string>
    <string name="full_address">Full Address <font color="#EE1D1D"> *</font></string>
    <string name="zip">Pin Code<font color="#EE1D1D"> *</font></string>
    <string name="your_Skills">Your Skills<font color="#EE1D1D"> *</font></string>
    <string name="your_Skills1">Your Skills</string>
    <string name="skill">Skill<font color="#EE1D1D"> *</font></string>
    <string name="transport_facility">Transport Facility<font color="#EE1D1D"> *</font></string>
    <string name="fitness_level">Fitness Level<font color="#EE1D1D"> *</font></string>
    <string name="fitness_level1">Fitness Level</string>
    <string name="Transport_Facility_Available_in_your_area">Transport Facility Available in your area<font color="#EE1D1D"> *</font></string>
    <string name="Transport_Facility_Available_in_your_area1">Transport Facility Available in your area</string>
    <string name="write_something_about_yourself">Write something about yourself<font color="#EE1D1D"> *</font></string>
    <string name="write_something_about_yourself1">Write something about yourself</string>
    <string name="any_disability">Any Disability<font color="#EE1D1D"> *</font></string>
    <string name="profile_type">Profile Type<font color="#EE1D1D"> *</font></string>
    <string name="about">About<font color="#EE1D1D"> *</font></string>
    <string name="name">Name<font color="#EE1D1D"> *</font></string>
    <string name="relation">Relation<font color="#EE1D1D"> *</font></string>
    <string name="living_with_you">Currently Living with You?”<font color="#EE1D1D"> *</font></string>
    <string name="category">Category<font color="#EE1D1D"> *</font></string>
    <string name="sub_category">Sub Category<font color="#EE1D1D"> *</font></string>
    <string name="shop_name">Shop/Office/Person Name<font color="#EE1D1D"> *</font></string>
    <string name="reason_for_leave">Reason For Leave<font color="#EE1D1D"> *</font></string>
    <string name="roles_amp_responsibilities"><![CDATA[Roles & Responsibilities]]><font color="#EE1D1D"> *</font></string>
    <string name="from_date">From Date<font color="#EE1D1D"> *</font></string>
    <string name="sub_district">Sub District<font color="#EE1D1D"> *</font></string>
    <string name="sub_district1">Sub District</string>
    <string name="details_of_disability">Details of Disability <font color="#EE1D1D"> *</font></string>
    <string name="details_of_disability1">Details of Disability</string>
    <string name="village">Village/Town<font color="#EE1D1D"> *</font></string>
    <string name="village1">Village/Town</string>
    <string name="age">Age<font color="#EE1D1D"> *</font></string>
    <string name="age1">Age</string>
    <string name="marital_status">Marital Status<font color="#EE1D1D"> *</font></string>
    <string name="marital_status1">Marital Status</string>
    <string name="worked">Worked<font color="#EE1D1D"> *</font></string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="to_date">To Date<font color="#EE1D1D"> *</font></string>
    <string name="company_name">Company Name<font color="#EE1D1D"> *</font></string>
    <string name="contact_number">Contact Number<font color="#EE1D1D"> *</font></string>
    <string name="contact_number1">Contact Number</string>
    <string name="business_type">Business Type<font color="#EE1D1D"> *</font></string>
    <string name="floor">Floor<font color="#EE1D1D"> *</font></string>
    <string name="company_look">Office / Store Look<font color="#EE1D1D"> *</font></string>
    <string name="from_time">From Time<font color="#EE1D1D"> *</font></string>
    <string name="to_time">To Time<font color="#EE1D1D"> *</font></string>
    <string name="company_store_name">Company / Firm /Personal Name<font color="#EE1D1D"> *</font></string>
    <string name="type_of_business">Type of Business<font color="#EE1D1D"> *</font></string>
    <string name="opening_hours">Opening Hours<font color="#EE1D1D"> *</font></string>
    <string name="contact_no">Contact No<font color="#EE1D1D"> *</font></string>
    <string name="opening_days">Opening Days<font color="#EE1D1D"> *</font></string>
    <string name="number_of_floor">Total Number of Floors of your office/ store<font color="#EE1D1D"> *</font></string>
    <string name="working_hours_boys">Working Hours Boys</string>
    <string name="working_hours_girls">Working Hours Girls</string>
    <string name="title">Name of the Job Position<font color="#EE1D1D"> *</font></string>
    <string name="description">Job Description</string>
    <string name="job_type">Job Type<font color="#EE1D1D"> *</font></string>
    <string name="experience"> Minimum Required Experience<font color="#EE1D1D"> *</font></string>
    <string name="number_of_vacancy">Number of Vacancy<font color="#EE1D1D"> *</font></string>
    <string name="status">Job status ( Active /Inactive)<font color="#EE1D1D"> *</font></string>
    <string name="last_date">Last date to apply</string>
    <string name="salary">Salary<font color="#EE1D1D"> *</font></string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="i_need_staff_for_my_business">I Need Staff For My Business.</string>
    <string name="i_m_looking_for_a_job">I\'m Looking For A Job.</string>
    <string name="sign_up_as">Sign Up as</string>
    <string name="welcome">WELCOME!</string>
    <string name="family_member">Family Members</string>
    <string name="filters">Filters</string>
    <string name="job_details">Job Details</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="apply">Apply</string>
    <string name="update">Update</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="work_exprience">Work Experience</string>
    <string name="previous_work_exprience">Previous Work Experience</string>
    <string name="applied_jobs">Applied Jobs</string>
    <string name="hh_mm">HH:MM</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="find_perfect_employee">find perfect employee</string>
    <string name="recent_profile">Recent Profile</string>
    <string name="find_perfect_job">Find Perfect Job</string>
    <string name="english">English</string>
    <string name="hindi">हिन्‍दी</string>
    <string name="my_profile">My Profile</string>
    <string name="menu">Menu</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions">Terms &amp; Condition </string>
    <string name="language">Language</string>
    <string name="delete_account">Delete Account</string>
    <string name="next">Next</string>
    <string name="gender1">Gender</string>
    <string name="state1">State</string>
    <string name="city1">City</string>
    <string name="category1">Category</string>
    <string name="sub_category1">Sub Category</string>
    <string name="job_type1">Job Type</string>
    <string name="company_look1">Company Look</string>
    <string name="business_type1">Business Type</string>
    <string name="staff_rakho">Staff Rakho</string>
    <string name="a_fully_free_platform_for_all_the_employers_amp_jobseeker_to_search_amp_find_each_other">"A completely free platform for all employers and job seekers to search and connect with each other."</string>
    <string name="hindi_head">"सभी नियोक्ताओं और नौकरी चाहने वालों के लिए एक बिल्कुल मुफ्त मंच, जहाँ वे एक-दूसरे को आसानी से खोज सकते हैं और एक-दूसरे से संपर्क भी कर सकते हैं।"</string>
    <string name="pin_code1">Pin Code</string>
    <string name="advance_filter">Advance Filter</string>
    <string name="salary_range">Salary Range</string>
</resources>