<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_white_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/btCloseFilter"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:src="@drawable/image_cross"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/ViewOrange"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_5sdp"
            android:layout_gravity="center"
            android:background="@color/blueTextColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCrossFilter" />

        <TextView
            android:id="@+id/TextFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/subhead_text"
            android:text="@string/filters"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ViewOrange" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/normal_text"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/job_type1"
            android:textColor="@color/lightTextColor" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/editext_bg">


            <Spinner
                android:id="@+id/spinnerJobType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/normal_text"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/category1"
            android:textColor="@color/lightTextColor" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/editext_bg">


            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/normal_text"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/sub_category1"
            android:textColor="@color/lightTextColor" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/editext_bg">


            <Spinner
                android:id="@+id/spinnerSubCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/normal_text"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/pin_code1"
            android:textColor="@color/lightTextColor" />


        <EditText
            android:id="@+id/etZip"
            style="@style/editBoxTextSize"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/editext_bg"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="@dimen/_10sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/normal_text"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/state1"
            android:textColor="@color/lightTextColor" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/editext_bg">

            <Spinner
                android:id="@+id/spinnerState"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/normal_text"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/city1"
            android:textColor="@color/lightTextColor" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/editext_bg">

            <Spinner
                android:id="@+id/spinnerCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/btAdvanceFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/subhead_text"
            android:text="@string/advance_filter"
            android:textColor="@color/blueTextColor"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:id="@+id/advanceFilterBox"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/normal_text"
                android:text="@string/gender1"
                android:textColor="@color/lightTextColor" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/editext_bg">


                <Spinner
                    android:id="@+id/spinneGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_10sdp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/normal_text"
                android:text="@string/salary_range"
                android:textColor="@color/lightTextColor" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/editext_bg">


                <Spinner
                    android:id="@+id/spinnerSalary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_10sdp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/normal_text"
                android:text="@string/marital_status1"
                android:textColor="@color/lightTextColor" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/editext_bg">


                <Spinner
                    android:id="@+id/spinnerMaritalStatus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_10sdp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/normal_text"
                android:text="@string/business_type1"
                android:textColor="@color/lightTextColor" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/editext_bg">

                <Spinner
                    android:id="@+id/spinnerBusinessType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_10sdp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/normal_text"
                android:text="@string/company_look1"
                android:textColor="@color/lightTextColor" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/editext_bg">

                <Spinner
                    android:id="@+id/spinnerCompanyLook"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_10sdp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/btnApplyFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/btdark_blue_bg"
                    android:fontFamily="@font/subhead_text"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:text="@string/apply"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintAreaofPractice" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/btnClose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/btdark_red_bg"
                    android:fontFamily="@font/subhead_text"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:text="@string/close"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintAreaofPractice" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
